[package]
name = "distributed_task_queue"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "migrate", "uuid"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenvy = "0.15"
